tests/snapshots/render__gfm_footnotes_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/footnotes.md\", \"40\")"
---
# Footnotes
────────────────────────────────────────

A claim that needs a source[^source] and
 another one[^long].

Text with an inline reference[^source]
repeated.

[^source] The referenced work.

[^long] A longer note that spans enough
        words to wrap when the terminal
        is narrow, so continuation
        alignment is visible.
