tests/snapshots/render__gfm_nested_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/nested.md\", \"80\")"
---
# Nested structures
────────────────────────────────────────────────────────────────────────────────

• level one
  ◦ level two
    ▪ level three
      • level four
• back to one

1. ordered one
   1. ordered two
      ▪ bullet inside ordered
2. ordered one again

│ quote level one
│ • list inside a quote
│ • second item
│
│ │ quote level two
│ │
│ │ ╭─ text
│ │ │ code inside a nested quote
│ │ ╰─

• item with a paragraph

  A second paragraph inside the same list item, long enough that it wraps at a
  narrow terminal width.

• item with code

  ╭─ sh
  │ echo nested
  ╰─
