tests/snapshots/render__gfm_showcase_120.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/showcase.md\", \"120\")"
---
# mdvu showcase
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

A paragraph with bold, italic, struck and inline code. A second sentence on a soft-wrapped line.

## Lists
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

• first bullet
• second bullet
  • nested bullet
  • another nested bullet
• third bullet

1. first step
2. second step
3. third step

### Task list

[x] parse Markdown
[ ] render diagrams
[ ] ship it

## Quote
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

│ A quoted paragraph.
│
│ │ A nested quote.

## Code
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

╭─ rust
│ fn main() {
│     println!("hello");
│ }
╰─

╭─
│ indented code block
╰─

## Table
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

┌───────┬──────┬────────┐
│ Name  │ Kind │  Notes │
├───────┼──────┼────────┤
│ alpha │ one  │  first │
│ beta  │ two  │ second │
└───────┴──────┴────────┘

## Links and images
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

See the docs (https://example.com/docs) and https://example.com.

[image: architecture diagram] (tests/fixtures/gfm/.attachments/architecture.png)

design.xlsx (tests/fixtures/gfm/.attachments/design.xlsx)

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

Done.
