tests/snapshots/render__gfm_tables_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/tables.md\", \"40\")"
---
# Tables
────────────────────────────────────────

Default alignment:

┌────────┬───────┐
│ Column │ Value │
├────────┼───────┤
│ a      │ 1     │
│ b      │ 2     │
└────────┴───────┘

Explicit alignment:

┌──────────────────┬──────────┬───────┐
│ Left             │  Center  │ Right │
├──────────────────┼──────────┼───────┤
│ l                │    c     │     r │
│ longer left cell │ centered │ 12345 │
└──────────────────┴──────────┴───────┘

A table with prose cells that must wrap:

┌────────┬─────────────────────────────┐
│ Term   │ Definition                  │
├────────┼─────────────────────────────┤
│ pager  │ A program that displays     │
│        │ text one screen at a time   │
│        │ and lets the reader scroll. │
│ flavor │ The dialect of Markdown     │
│        │ used to interpret the       │
│        │ source document.            │
└────────┴─────────────────────────────┘
