tests/snapshots/render__gfm_wide_table_120.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/wide-table.md\", \"120\")"
---
# Table too wide for a grid
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

Six columns of unbreakable identifiers cannot fit a narrow terminal, so the table degrades to a vertical list instead of
a broken grid.

┌────────────┬────────────┬─────────────┬────────────┬────────────────────────────┬──────────────┐
│ identifier │ descriptor │ qualifier   │ annotation │ とても長い日本語の見出し   │ remainder    │
├────────────┼────────────┼─────────────┼────────────┼────────────────────────────┼──────────────┤
│ alpha_one  │ beta_two   │ gamma_three │ delta_four │ これはとても長い説明文です │ epsilon_five │
│ zeta_six   │ eta_seven  │ theta_eight │ iota_nine  │ 二行目の日本語の説明です   │ kappa_ten    │
└────────────┴────────────┴─────────────┴────────────┴────────────────────────────┴──────────────┘
